add error modal and some style fixes
