# swagger_server/models/__init__.py
@@ -6,3 +6,4 @@ from __future__ import absolute_import
 from swagger_server.models.captcha_prompt import CaptchaPrompt
 from swagger_server.models.login_body import LoginBody
 from swagger_server.models.next_frame import NextFrame
+from swagger_server.models.successful_authentication import SuccessfulAuthentication
